Added Fonts Notes

--- a/2_ReplacedContent/index.html
+++ b/2_ReplacedContent/index.html
@@ -19,6 +19,15 @@
 	<audio controls src="media/sea.mp3" type="audio/mp3"></audio>
 
 	<p>Here is an iFrame.</p>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/Cd3khhCnnsY?si=rLf-avCy2YR6GlTP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<iframe
+		width="560"
+		height="315"
+		src="https://www.youtube.com/embed/Cd3khhCnnsY?si=rLf-avCy2YR6GlTP"
+		title="YouTube video player"
+		frameborder="0"
+		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+		referrerpolicy="strict-origin-when-cross-origin"
+		allowfullscreen>
+	</iframe>
 </body>
 </html>
